backend clock task, added as docker image deployed to heroku
cleaned up README

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,4 @@
 build:
   docker:
-    web: Dockerfile
-run:
-  clock: python src/clock.py
+    web: Dockerfile.web
+    backend: Dockerfile.backend
