added munich einstein gym

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-boto3
-numpy
-pandas
-plotly
+boto3==1.18.18
+dvc==2.8.3
+numpy==1.18.15
+pandas==0.25.3
+plotly==4.14.3
 scikit-learn==0.23.1
 streamlit>=0.79.0
