Store gym information in S3, download in backend and frontend
Closes #37

--- a/capture-data/serverless.yml
+++ b/capture-data/serverless.yml
@@ -25,6 +25,7 @@ provider:
     OWM_API: ${file(config.json):OWM_API}
     BUCKETNAME: bboulderdataset
     CSVNAME: boulderdata.csv
+    GYMDATANAME: gymdata.json
 
   iamRoleStatements:
     - Effect: "Allow"
