added json with gym info and updated diagram and README

--- a/.gitignore
+++ b/.gitignore
@@ -130,9 +130,10 @@ dmypy.json
 
 # other
 .vscode/
-*.json
 *.csv
 *.model
 .DS_Store
 .serverless/
 node_modules/
+capture-data/*.json
+firestore-key.json
